# AutonomyProject

./: .gitignore  .gitmodules  README.md
gazebo/: test_00.world
notes/: plan_00.dia  plan_01.dia  plan_summary.dia  useful_links.md
obstacle_files/: .custom_file.json.swp  custom_file.json  draw_obst.py  empty.json  generate_grid_obst.py  obstacles_0.json  obstacles_1.json  obstacles_2.json  obstacles_300.json  obstacles_city_0.json  obstacles_local_test.json  obstacles_single.json  test
ros/: 2  display.html  imgui.ini  run_all_nodes.sh
ros/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros/devel/include/simple_car_model/: VehicleMoveCommand.h  VehicleState.h
ros/devel/include/world_vis/: VehicleMoveCommand.h  VehicleState.h
ros/devel/lib/pkgconfig/: gazebo_tutorials.pc  rrbot_control.pc  rrbot_description.pc  rrbot_gazebo.pc  simple_car_model.pc  vehicle_controller.pc  world_vis.pc
ros/devel/lib/python2.7/dist-packages/simple_car_model/msg/: _VehicleMoveCommand.py  _VehicleState.py  __init__.py
ros/devel/lib/python2.7/dist-packages/world_vis/msg/: _VehicleMoveCommand.py  _VehicleState.py  __init__.py
ros/devel/lib/simple_car_model/: simple_car_model_node
ros/devel/lib/world_vis/: world_vis_node
ros/devel/share/common-lisp/ros/simple_car_model/msg/: VehicleMoveCommand.lisp  VehicleState.lisp  _package.lisp  _package_VehicleMoveCommand.lisp  _package_VehicleState.lisp  simple_car_model-msg.asd
ros/devel/share/common-lisp/ros/world_vis/msg/: VehicleMoveCommand.lisp  VehicleState.lisp  _package.lisp  _package_VehicleMoveCommand.lisp  _package_VehicleState.lisp  world_vis-msg.asd
ros/devel/share/gazebo_tutorials/cmake/: gazebo_tutorialsConfig.cmake
ros/devel/share/gennodejs/ros/simple_car_model/msg/: VehicleMoveCommand.js  VehicleState.js  _index.js
ros/devel/share/gennodejs/ros/world_vis/msg/: VehicleMoveCommand.js  VehicleState.js
ros/devel/share/roseus/ros/simple_car_model/: manifest.l
ros/devel/share/roseus/ros/simple_car_model/msg/: VehicleMoveCommand.l  VehicleState.l
ros/devel/share/roseus/ros/world_vis/: manifest.l
ros/devel/share/roseus/ros/world_vis/msg/: VehicleMoveCommand.l  VehicleState.l
ros/devel/share/rrbot_control/cmake/: rrbot_controlConfig.cmake
ros/devel/share/rrbot_description/cmake/: rrbot_descriptionConfig.cmake
ros/devel/share/rrbot_gazebo/cmake/: rrbot_gazeboConfig.cmake
ros/devel/share/simple_car_model/cmake/: simple_car_model-msg-extras.cmake  simple_car_model-msg-paths.cmake  simple_car_modelConfig.cmake
ros/devel/share/vehicle_controller/cmake/: vehicle_controllerConfig.cmake
ros/devel/share/world_vis/cmake/: world_vis-msg-extras.cmake  world_vis-msg-paths.cmake  world_visConfig.cmake
ros/libs/basic/include/: BaseVehicle.h  V2.hpp  point.hpp
ros/libs/basic/src/: BaseVehicle.cpp
ros/libs/imgui/: imconfig.h
ros/libs/imgui/misc/fonts/: binary_to_compressed_c.cpp
ros/msgs/: CostMap.msg  PID_Gains.msg  RenderTree.msg  Trajectory.msg  VehicleMoveCommand.msg  VehicleState.msg  Waypoint.msg
ros/src/cost_map_generator/: CMakeLists.txt  package.xml
ros/src/cost_map_generator/src/: main.cpp
ros/src/global_planner/: CMakeLists.txt  package.xml
ros/src/global_planner/include/: RRT.h  global_planner.h  node.h  prm.h
ros/src/global_planner/src/: global_planner.cpp  main.cpp  node.cpp
ros/src/local_planner/: CMakeLists.txt  package.xml
ros/src/local_planner/include/: RRT.h  node.h
ros/src/local_planner/src/: main.cpp  node.cpp
ros/src/simple_car_model/: CMakeLists.txt  package.xml
ros/src/simple_car_model/include/: BaseVehicle.hpp  ros_to_system.h
ros/src/simple_car_model/src/: main.cpp  ros_to_system.cpp
ros/src/vehicle_controller/: CMakeLists.txt  package.xml
ros/src/vehicle_controller/include/: ros_to_system.h
ros/src/vehicle_controller/src/: main.cpp  ros_to_system.cpp
ros/src/world_vis/: .#CMakeLists.txt  CMakeLists.txt  package.xml
ros/src/world_vis/include/: gui.h  ros_to_system.h  world.h
ros/src/world_vis/src/: gui.cpp  main.cpp  ros_to_system.cpp  world.cpp
